--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <h1>My Portfolio</h1>
       <nav>
         <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="pages/about.html">About</a></li>
+          <li><a href="pages/adventures.html">Projects</a></li>
+          <li><a href="pages/contacts.html">Contact</a></li>
         </ul>
       </nav>
     </header>
