--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
-  <link rel="stylesheet" href="styles/aboutme.css">
+  <title>Contact</title>
+  <link rel="stylesheet" href="styles/contact.css">
 </head>
 <body>
   
