--- a/index.html
+++ b/index.html
@@ -17,5 +17,17 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+      <section class="hero">
+        <h2>Welcome to My Portfolio</h2>
+        <p class="hero-intro">
+          Hi, I'm <span class="hero-name">Your Name</span>. I'm passionate about
+          web development, design, and creating amazing digital experiences.
+          Explore my work and get to know me!
+        </p>
+        <a href="pages/about.html" class="cta-btn">Learn More About Me</a>
+      </section>
+    </main>
   </body>
 </html>
