--- a/pages/about.html
+++ b/pages/about.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
-  <link rel="stylesheet" href="styles/aboutme.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Me</title>
+    <link rel="stylesheet" href="styles/aboutme.css" />
+  </head>
+  <body>
+    <div class="about-container">
+      <div class="profile-section">
+        <img
+          src="https://via.placeholder.com/150"
+          alt="Profile Picture"
+          class="profile-img"
+        />
+        <h1>Your Name</h1>
+        <p class="bio">
+          A short bio about yourself. Share your background, interests, and what
+          makes you unique!
+        </p>
+      </div>
+      <div class="skills-section">
+        <h2>Skills</h2>
+        <ul>
+          <li>Web Development</li>
+          <li>Design</li>
+          <li>Communication</li>
+          <li>Teamwork</li>
+        </ul>
+      </div>
+      <div class="contact-section">
+        <h2>Contact</h2>
+        <p>
+          Email:
+          <a href="mailto:your.email@example.com">your.email@example.com</a>
+        </p>
+        <p>
+          LinkedIn:
+          <a href="https://linkedin.com/in/yourprofile" target="_blank"
+            >yourprofile</a
+          >
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
