Omo i nor even know if na back i go :(

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <ul>
           <li><a href="pages/about.html">About</a></li>
           <li><a href="pages/adventures.html">Projects</a></li>
-          <li><a href="pages/contacts.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -30,4 +29,5 @@
       </section>
     </main>
   </body>
+  <script src="main.js"></script>
 </html>
