--- a/pages/about.html
+++ b/pages/about.html
@@ -7,41 +7,65 @@
     <link rel="stylesheet" href="styles/aboutme.css" />
   </head>
   <body>
+    <header class="about-header">
+      <nav>
+        <a href="../../index.html" class="back-home">&#8592; Home</a>
+      </nav>
+    </header>
     <div class="about-container">
       <div class="profile-section">
         <img
-          src="https://via.placeholder.com/150"
+          src="../profilepic.jpg"
           alt="Profile Picture"
           class="profile-img"
         />
-        <h1>Your Name</h1>
+        <h1>Nehikhare Clinton Asemota</h1>
         <p class="bio">
-          A short bio about yourself. Share your background, interests, and what
-          makes you unique!
+          Software engineer with a passion for building real-world solutions
+          through code. Quick to learn, detail-driven, and eager to grow within
+          a collaborative tech environment. Enthusiastic about continuous
+          learning, teamwork, and contributing to impactful digital products.
+          Ready to take on new challenges, apply fresh ideas, and grow into a
+          world-class developer.
         </p>
       </div>
       <div class="skills-section">
-        <h2>Skills</h2>
-        <ul>
-          <li>Web Development</li>
-          <li>Design</li>
-          <li>Communication</li>
-          <li>Teamwork</li>
-        </ul>
+        <div class="technical-skills">
+          <h2>Technical Skills</h2>
+          <ul>
+            <li>HTML & CSS</li>
+            <li>WordPress</li>
+            <li>JavaScript (Basic)</li>
+            <li>React</li>
+            <li>Git</li>
+          </ul>
+        </div>
+        <div class="professional-skills">
+          <h2>Professional Skills</h2>
+          <ul>
+            <li>Problem Solving</li>
+            <li>Team Collaboration</li>
+            <li>Continuous Learning</li>
+            <li>Algorithmic Thinking</li>
+            <li>Adaptability</li>
+            <li>Attention to Detail</li>
+          </ul>
+        </div>
       </div>
       <div class="contact-section">
         <h2>Contact</h2>
         <p>
           Email:
-          <a href="mailto:your.email@example.com">your.email@example.com</a>
+          <a href="mailto:clintonasemota@gmail.com">clintonasemota@gmail.com</a>
         </p>
         <p>
           LinkedIn:
-          <a href="https://linkedin.com/in/yourprofile" target="_blank"
-            >yourprofile</a
+          <a href="https://www.linkedin.com/in/nehikhare-asemota-4b534b296" target="_blank"
+            >Nehikhare Asemota</a
           >
         </p>
       </div>
     </div>
   </body>
+  <script src="../main.js"></script>
 </html>
