--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header></header>
-  <main></main>
-  <footer></footer>
+  <header>
+    <h1>Welcome to My Portfolio</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h2>About Me</h2>
+      <p>This is the about me section.</p>
+    </section>
+    <section>
+      <h2>My Projects</h2>
+      <p>This is the my projects section.</p>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2023 My Website</p>
+  </footer>
 </body>
 </html>
