Got started with python

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     <section>
       <h2>My Projects</h2>
-      <p>This is the my projects section.</p>
+      <p>This is my projects section.</p>
     </section>
   </main>
   <footer>
